<resources>
    <string name="empty" />
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="color_code_prefix">#</string>
    <string name="network_error_message">通信に失敗しました。時間を置いて再度お試しください。</string>
    <string name="open">開く</string>
    <string name="close">閉じる</string>

    <!-- Menu -->
    <string name="menu_my_history">マイ絵文字</string>
    <string name="menu_our_history">みんなの生成履歴</string>
    <string name="menu_setting">チーム設定</string>
    <string name="menu_other">その他</string>
    <string name="menu_contact">お問い合わせ</string>
    <string name="menu_privacy">プライバシーポリシー</string>
    <string name="menu_copyright">著作権表記</string>
    <string name="menu_version_info">バージョン情報</string>

    <!-- Splash -->
    <string name="splash_startup_error_title">起動エラー</string>
    <string name="splash_startup_error_message">アプリケーションの初期化に失敗しました。通信状況を確認し再度お試しください。</string>

    <!-- Main -->
    <string name="main_title">絵文字ジェネレーター</string>
    <string name="main_version_app_name">絵文字ジェネレーター</string>
    <string name="main_version_url">https://emoji-gen.ninja</string>
    <string name="main_version_copyright">&#169; 2017&#8211;2018 Emoji Generator</string>
    <string name="main_version_prefix">v</string>
    <string name="main_my_history_title">マイ絵文字</string>
    <string name="main_our_history_title">みんなの生成履歴</string>
    <string name="main_my_history_empty_message">過去の生成履歴がありません。\n新しく絵文字を生成してみましょう。</string>

    <!-- Generator -->
    <string name="generator_title">絵文字の生成</string>
    <string name="generator_register">登録</string>
    <string name="generator_share">シェア</string>
    <string name="generator_emoji_text_label">テキスト</string>
    <string name="generator_font_label">フォント</string>
    <string name="generator_text_placeholder">絵文\n字。</string>
    <string name="generator_text_color_label">文字色</string>
    <string name="generator_text_color_initial">EC71A1FF</string>
    <string name="generator_background_color_label">背景色</string>
    <string name="generator_background_color_initial">00000000</string>
    <string name="generator_public_flag_label">公開設定</string>
    <string name="generator_share_dialog_title">生成した絵文字を共有</string>
    <string name="generator_share_download_title">ダウンロード中</string>
    <string name="generator_share_download_message">絵文字をダウンロードしています</string>
    <string name="generator_share_permission_error_message">絵文字の共有するには、権限を許可する必要があります</string>
    <string name="generator_register_button">登録</string>
    <string name="generator_add_team_button">新規追加</string>
    <string name="generator_add_dialog_description">絵文字の登録情報を入力して下さい。</string>
    <string name="generator_add_team_label">チーム</string>
    <string name="generator_add_name_label">絵文字の名前</string>
    <string name="generator_emoji_name_hint">emoji</string>
    <string name="generator_register_progress_title">登録中</string>
    <string name="generator_register_progress_message">絵文字を登録しています。</string>
    <string name="generator_register_succeeded_message">絵文字を登録しました。</string>
    <string name="generator_register_failed_title">登録失敗</string>
    <string name="generator_register_unknown_error">未知のエラー</string>
    <string name="generator_register_empty_team">チームが登録されていません</string>
    <string name="generator_public_flag_on_label">生成履歴に表示</string>
    <string name="generator_public_flag_off_label">生成履歴に表示しない</string>

    <!-- Setting -->
    <string name="setting_title">チーム設定</string>
    <string name="setting_add_team_title">新規登録</string>
    <string name="setting_add_team_description">追加したい Slack チームの情報を入力して下さい。</string>
    <string name="setting_team_list_title">一覧</string>
    <string name="setting_team_domain_label">チーム</string>
    <string name="setting_team_domain_hint">team</string>
    <string name="setting_email_label">メールアドレス</string>
    <string name="setting_email_hint">example@example.com</string>
    <string name="setting_password_label">パスワード</string>
    <string name="setting_password_hint">password</string>
    <string name="setting_add_team_button">登録</string>
    <string name="setting_remove_team_button">削除</string>
    <string name="setting_remove_team_message_title">削除確認</string>
    <string name="setting_remove_team_message_message">本当にチーム「 %1$s 」を削除してもよろしいですか?</string>
    <string name="setting_auth_progress_title">認証中</string>
    <string name="setting_auth_progress_message">Slack への認証を試行しています。</string>
    <string name="setting_auth_failed_message">認証に失敗しました。入力された情報が正しいか確認してください。</string>
    <string name="setting_auth_succeeded_message">認証に成功しました。チーム一覧へ登録されました。</string>
    <string name="setting_add_team_help_description">チーム欄には、XXX.slack.com の XXX の部分を入力してください。</string>
</resources>
