<?xml version="1.0" encoding="utf-8"?>
<moe.pine.emoji.view.generator.RegisterDialogView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:paddingBottom="17dp"
    android:paddingLeft="17dp"
    android:paddingRight="17dp"
    android:paddingTop="17dp"
    tools:ignore="RtlHardcoded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generator_add_dialog_description"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generator_add_team_label"
            android:textColor="@color/color_blue_dark"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_generator_teams"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_square_white_bordered_gray"
            android:minHeight="0dp" />

        <moe.pine.emoji.view.generator.AddTeamButton
            android:id="@+id/button_register_add_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_blue"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:text="@string/generator_add_team_button"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/generator_add_name_label"
            android:textColor="@color/color_blue_dark"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_square_white_bordered_gray"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textCursorDrawable="@drawable/shape_cursor_blue"
            android:textSize="@dimen/text_size_small">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/button_text_input_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_red"
        android:minHeight="34dp"
        android:text="@string/generator_register_button"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_medium" />
</moe.pine.emoji.view.generator.RegisterDialogView>